; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_23591.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_23591.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"usage: %s -d <ip_dest> [options]\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"options:\0A\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c" -d target ip\0A\00", align 1
@.str.3 = private unnamed_addr constant [30 x i8] c" -p target port (default 21)\0A\00", align 1
@.str.4 = private unnamed_addr constant [39 x i8] c" -u username to log with (default %s)\0A\00", align 1
@user = common dso_local global i8* null, align 8
@.str.5 = private unnamed_addr constant [39 x i8] c" -s password to log with (default %s)\0A\00", align 1
@pass = common dso_local global i8* null, align 8
@.str.6 = private unnamed_addr constant [37 x i8] c" -w writable directory (default %s)\0A\00", align 1
@path = common dso_local global i8* null, align 8
@.str.7 = private unnamed_addr constant [40 x i8] c" -H listening host (default 127.0.0.1)\0A\00", align 1
@.str.8 = private unnamed_addr constant [41 x i8] c" -P listening port on host (default 80)\0A\00", align 1
@.str.9 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.3, i64 0, i64 0))
  %8 = load i8*, i8** @user, align 8
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.4, i64 0, i64 0), i8* %8)
  %10 = load i8*, i8** @pass, align 8
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.5, i64 0, i64 0), i8* %10)
  %12 = load i8*, i8** @path, align 8
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.6, i64 0, i64 0), i8* %12)
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.7, i64 0, i64 0))
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.8, i64 0, i64 0))
  %16 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.9, i64 0, i64 0))
  %17 = call i32 @exit(i32 1) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
